@@ -1,18 +1,26 @@
 package com.example.hwmaven_budgetapp.model;
 
+import lombok.EqualsAndHashCode;
+import lombok.Getter;
+import lombok.ToString;
+import org.apache.commons.lang3.StringUtils;
+
+@Getter
+@EqualsAndHashCode
+@ToString(includeFieldNames = true)
 public class Ingredient {
     private String name;
     private int totalIngredients;
     private String measure;
 
-    public Ingredient(String name, int totalIngredients, String measure) {
+        public Ingredient(String name, int totalIngredients, String measure) {
         setName(name);
         setTotalIngredients(totalIngredients);
         setMeasure(measure);
     }
 
     public void setName(String name) {
-        if (name!=null && !name.isBlank() && !name.isEmpty()){
+        if (name!=null && StringUtils.isBlank(name) && StringUtils.isEmpty(name)){
         this.name = name;}
         else {this.name = "<Некорректное имя>";}
     }
@@ -23,18 +31,9 @@ public class Ingredient {
         this.totalIngredients = totalIngredients;}
     }
     public void setMeasure(String measure) {
-        if (measure!=null && !measure.isBlank() && !measure.isEmpty()){
+        if (measure!=null && StringUtils.isBlank(measure) && StringUtils.isEmpty(measure)){
             this.measure = measure;}
         else {this.measure = "<Некорректная грамовка>";}
     }
 
-    public String getName() {
-        return name;
-    }
-    public int getTotalIngredients() {
-        return totalIngredients;
-    }
-    public String getMeasure() {
-        return measure;
-    }
 }
